Add support for SFML and create window

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,7 @@ add_executable(Minesweeper
     core/Board.cpp
     core/MineGenerator.cpp
     core/Minesweeper.cpp
+    graphics/Game.cpp
 )
+
+target_link_libraries(Minesweeper PRIVATE sfml-graphics sfml-system sfml-window)
