--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 
-add_executable(Minesweeper 
+add_executable(minesweeper 
     main.cpp 
     core/Board.cpp
     core/MineGenerator.cpp
     core/Minesweeper.cpp
     graphics/Game.cpp
+    graphics/MinesweeperSFML.cpp
 )
 
-target_link_libraries(Minesweeper PRIVATE sfml-graphics sfml-system sfml-window)
+target_include_directories(minesweeper PRIVATE ${CMAKE_SOURCE_DIR}/src)
+target_link_libraries(minesweeper PRIVATE sfml-graphics sfml-system sfml-window)
